--- a/redux-practice/public/index.html
+++ b/redux-practice/public/index.html
@@ -10,17 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title> Vanilla Redux </title>
+    <title> React </title>
   </head>
 
   <body>
-    <h1>To Dos</h1>
-    <form>
-      <input type="text" placeholder="Write to do" />
-      <button>Add</button>
-    </form>
-    <ul>
-    </ul>
+    <div id="root"></div>
   </body>
 
 </html>
